Overflow corrected

--- a/Assignment 7/public/css/styles.css
+++ b/Assignment 7/public/css/styles.css
@@ -11,6 +11,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     overflow-x: hidden;
+    overflow-y: hidden;
     display: flex;
     flex-direction: column;
 }
